--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,11 @@ layout: compress
 
   {% include head.html %}
 
+  /* mathjax 추가 */
+  {% if page.use_math %}
+    {% include mathjax_support.html %}
+  {% endif %}
+
   <body data-spy="scroll" data-target="#toc">
 
     {% include sidebar.html %}
