Install Mathjax (succeed) https://baeseongsu.github.io/posts/apply-mathjax-to-jekyll-blog/ Feb 2 2021 11:50 pm

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -77,4 +77,10 @@
 
   {% include js-selector.html %}
 
+  <!-- Mathjax -->
+  /* mathjax 추가 */
+  {% if page.use_math %}
+    {% include mathjax_support.html %}
+  {% endif %}
+
 </head>
