add a code for Google Adsense
11:29 pm, Feb. 22, 2021

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -83,4 +83,7 @@
     {% include mathjax_support.html %}
   {% endif %}
 
+  <!-- Google Adsense -->
+  <script data-ad-client="ca-pub-4051318150845847" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 </head>
